Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7111

misleading error message in mgs_write_log_param

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      I mistakenly added a wrong parameter to MDS "mds.quota_type=ug" but tunefs.lustre didn't complain about it.

      Later when I mount the MDS target, the operation failed with ENOSYS. The log says:

      Nov 4 11:08:57 cshao kernel: Lustre: MGC10.76.101.91@tcp: Reactivating import
      Nov 4 11:08:57 cshao kernel: Lustre: Found index 0 for lustre-MDT0000, updating log
      Nov 4 11:08:57 cshao kernel: Lustre: Ignoring unrecognized param 'mds.quota_type=ug'
      Nov 4 11:08:57 cshao kernel: LustreError: 21069:0:(mgs_handler.c:539:mgs_handle_target_reg()) Failed to write lustre-MDT0000 log (-38)
      Nov 4 11:08:57 cshao kernel: LustreError: 21043:0:(obd_mount.c:1163:server_start_targets()) Required registration failed for lustre-MDT0000: -38
      Nov 4 11:08:57 cshao kernel: LustreError: 21043:0:(obd_mount.c:1739:server_fill_super()) Unable to start targets: -38

      Apparently it does not ignore the wrong parameter. Instead it failed the mount totally.

      So we either fix the misleading message or we should ignore ENOSYS by converting it to EOK and return to the caller.

            utopiabound Nathaniel Clark
            parinay parinay v kondekar (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: