LU-7111 misleading error message in mgs_write_log_param

Wrong params in tunefs.lustre might fail to mount targets.
This is expected but, the warning message is not appropriate.

This patch changes the warrning message to give an idea about
the problems it might cause.

Change-Id: I6221b34cef2b62f5aa9aeb3c8b1abe0df08c135f
Signed-off-by: Parinay Kondekar <parinay.kondekar@seagate.com>
Reviewed-on: http://es-gerrit.xyus.xyratex.com:8080/5915
Tested-by: Jenkins
Reviewed-by: Alexander Alexandr Boyko <alexander.boyko@seagate.com>
Reviewed-by: Alexander Zarochentsev <alexander.zarochentsev@seagate.com>
Tested-by: Elena V. Gryaznova <elena.gryaznova@seagate.com>